--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 .banner {
     height: 80vh;
     /* border: 1px solid black ; */
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('bg-1.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/bg-1.jpg');
     background-size: cover;
     background-position: center;
 }
